[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffbot-mcp-server"
version = "1.0.0"
description = "MCP Server for Diffbot DQL and Enhance APIs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.scripts]
diffbot-mcp-server = "diffbot_mcp_server:main"